<resources>
    <string name="app_name">SplitDiff</string>
    <string name="username">Username</string>
    <string name="username_sample">jeffchang5</string>

    <!--Pick Repo-->
    <string name="repo_empty">One of your text fields is empty</string>
    <string name="repo">Repo</string>
    <string name="repo_sample">jeffchang5.github.io</string>
    <string name="next">Next</string>

    <!--PR-->
    <string name="pull_requests_empty">No pull requests</string>
    <string name="error_failure">Couldn\'t load PRs</string>
    <string name="repo_does_not_exist">Couldn\'t find repo.</string>
    <string name="loading">Loading…</string>
    <string name="opened_by">Opened by </string>
    <string name="hold_diff">Tap and hold diffs to see the changes.</string>

</resources>
